# cursor-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  LICENSE_OTHER.md  LICENSING.md  README.md  comment_12.md  comment_14.md  comment_18.md  comment_19.md  comment_20.md  comment_21.md  comment_25.md  comment_31.md  comment_33.md  comment_34.md  comment_36.md  comment_38.md  comment_39.md  comment_42.md  comment_45.md  comment_47.md  comment_49.md  comment_50.md  comment_51.md  comment_52.md  package-lock.json  package.json
LICENSES/: CC-BY-SA-4.0.txt
docs/: DEVELOPMENT.md  README.md  USAGE.md  api-endpoints.json  api.md
python/: pyproject.toml
python/src/cursor_sdk/: __init__.py  client.py  errors.py
python/tests/: __init__.py
python/tests/e2e/: __init__.py  test_local_server_e2e.py
python/tests/integration/: __init__.py  test_all_endpoints_covered.py  test_auth_types.py
python/tests/unit/: __init__.py  test_api_key_storage.py  test_api_key_validation.py  test_auth.py  test_content_type_edge_cases.py  test_error_response_parsing.py  test_header_override.py  test_https_enforcement.py  test_path_parameter_sanitization.py  test_request_handling.py  test_timeout.py
scripts/: generate-cursor-api-doc.mjs
