[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-endpoint-sdk"
version = "0.1.0"
description = "Python SDK for Cursor public APIs"
requires-python = ">=3.10"
authors = [{ name = "Cursor SDK" }]
license = { text = "ISC" }
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=cursor_sdk",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]
